--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Coder344</title>
+  <title>Coder3</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -30,7 +30,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
     <div class="container">
-      <a class="navbar-brand js-scroll-trigger" href="#page-top">Coder34</a>
+      <a class="navbar-brand js-scroll-trigger" href="#page-top">Coder3</a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         Menu
         <i class="fas fa-bars"></i>
@@ -65,7 +65,7 @@
     <div class="container">
       <div class="intro-text">
         <div class="intro-lead-in">Envision you ideas</div>
-        <div class="intro-heading text-uppercase">You dream it. We build it!/div>
+        <div class="intro-lead-in text-uppercase">You dream it. We build it!</div>	
         <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#services">Tell Me More</a>
       </div>
     </div>
@@ -213,13 +213,13 @@
       <div class="row">
         <div class="col-lg-12 text-center">
           <h2 class="section-heading text-uppercase">Our Amazing Team</h2>
-          <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+          <h3 class="section-subheading text-muted">Contributed in various project domains.</h3>
         </div>
       </div>
       <div class="row">
         <div class="col-sm-4">
           <div class="team-member">
-            <img class="mx-auto rounded-circle" src="img/team/priyank.jpeg" alt="">
+            <img class="mx-auto rounded-circle" src="img/team/priyank.jpg" alt="">
             <h4>Priyank Sharma</h4>
             <p class="text-muted">Lead Developer</p>
             <ul class="list-inline social-buttons">
@@ -233,7 +233,7 @@
         </div>
         <div class="col-sm-4">
           <div class="team-member">
-            <img class="mx-auto rounded-circle" src="img/team/bharti.jpg" alt="">
+            <img class="mx-auto rounded-circle" src="img/team/bharti.jpeg" alt="">
             <h4>Bharti Godwani</h4>
             <p class="text-muted">Lead Developer</p>
             <ul class="list-inline social-buttons">
@@ -262,7 +262,7 @@
       </div>
       <div class="row">
         <div class="col-lg-8 mx-auto text-center">
-          <p class="large text-muted">Know us more with our LinkedIn profiles.</p>
+          <p class="large text-muted">Please visit our linkedIn profiles for more detail.</p>
         </div>
       </div>
     </div>
@@ -295,7 +295,8 @@
       </div>
     </div>
   </section>
-  
+
+
   <!-- Portfolio Modals -->
 
   <!-- Modal 1 -->
@@ -505,3 +506,4 @@
 </body>
 
 </html>
+
